--- a/acessorios.html
+++ b/acessorios.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style5.css">
+    <link rel="stylesheet" href="style6.css">
 </head>
 
 <body>
@@ -30,53 +30,50 @@
     </header>
 
     <main>
-        <! USANDO bootstrap>
-            <div class="container text-center">
-                <div class="row">
-                    <div class="col">
-                        <section class="secao-1">
-                            <h3>EMPRESA</h3>
-                            <h2>PAGINA INICIAL</h2>
-                            <h1>BEM VINDO</h1>
-                            <p>Transforme Seu Carro em uma Obra de Arte com Nossos Acessórios Automotivos!
+        <ul class="produtos">
+            <li>
+                <h2>Aerofólio</h2>
+                <img src="aerofolio.jpeg">
+                <p class="produto-descricao">Maior Linha de Aerofólio do Mercado</p>
+                <p class="produto-preco">a patir de R$ 270,00</p>
+            </li>
 
-                                Quer elevar o estilo do seu carro a novos patamares? Procurando por acessórios que
-                                combinem funcionalidade e elegância? Você veio ao lugar certo! Apresentamos uma seleção
-                                imbatível de acessórios automotivos que vão transformar o seu veículo em uma verdadeira
-                                obra de arte sobre rodas.</p>
-                            <!Explicar digitar apenas a.btn.btn-info>
-                                <a href="" class="btn btn-info link-a-1">Botao 1</a>
-                                <a href="" class="btn btn-info link-a-2">Botao 2</a>
-                        </section>
+            <li>
+                <h2>Baterias</h2>
+                <img src="baterias.jpeg">
+                <p class="produto-descricao">Varias marcas de Baterias</p>
+                <p class="produto-preco">a partir de R$ 500,00</p>
+            </li>
 
-                        <div class="col">
-                            <section class="secao-2">
-                                <div class="img">
-                                    <img src="morris.png" alt="">
-                                </div>
-                            </section>
-                        </div>
+            <li>
+                <h2>Capa Banco</h2>
+                <img src="capa-de-banco.jpeg">
+                <p class="produto-descricao">Variedade de cor e tecido</p>
+                <p class="produto-preco">a partir de R$ 125,00</p>
+            </li>
 
-                        <div class="col">
-                            <section class="secao-2">
-                                <p>Estilo e Sofisticação: De spoilers a rodas personalizadas, temos tudo o que você
-                                    precisa para dar ao seu carro aquele toque de personalidade que vai fazer todos os
-                                    olhares se voltarem para você. Nossos acessórios são projetados para destacar o
-                                    estilo e a elegância do seu veículo, elevando-o a um novo nível de sofisticação.</p>
-                            </section>
+            <li>
+                <h2>Pneus</h2>
+                <img src="pneus.jpeg">
+                <p class="produto-descricao">Maior Linha de Pneus do Mercado</p>
+                <p class="produto-preco">a partir de R$ 400,00</p>
+            </li>
 
-                        </div>
-                    </div>
-                </div>
+            <li>
+                <h2>Lanternas</h2>
+                <img src="lanternas.jpeg">
+                <p class="produto-descricao">Varios tipos de Lanterna</p>
+                <p class="produto-preco">a partir de R$ 150,00</p>
+            </li>
 
-                <div class="col">
-                    <section class="secao-2">
-                        <p>Áudio de Alta Performance: Desfrute de uma experiência sonora incomparável com os nossos
-                            sistemas de áudio de alta qualidade. De sistemas de som completos a amplificadores potentes,
-                            oferecemos tudo o que você precisa para transformar seu carro em um verdadeiro palco de
-                            concerto sobre rodas.</p>
-                    </section>
-                </div>
+            <li>
+                <h2>Motor</h2>
+                <img src="motor.jpeg">
+                <p class="produto-descricao">Varias marcas e melhores motores do mercado</p>
+                <p class="produto-preco">a partir de R$ 1200,00</p>
+            </li>
+
+        </ul>
 
     </main>
 </body>
