--- a/acessorios.html
+++ b/acessorios.html
@@ -50,6 +50,7 @@
                 <img src="capa-de-banco.jpeg">
                 <p class="produto-descricao">Variedade de cor e tecido</p>
                 <p class="produto-preco">a partir de R$ 125,00</p>
+                <p> TESTE</p>
             </li>
 
             <li>
