--- a/acessorios.html
+++ b/acessorios.html
@@ -47,10 +47,9 @@
 
             <li>
                 <h2>Capa Banco</h2>
-                <img src="capa-de-banco.jpeg">
+                <img src="capa.jpeg">
                 <p class="produto-descricao">Variedade de cor e tecido</p>
                 <p class="produto-preco">a partir de R$ 125,00</p>
-                <p> TESTE</p>
             </li>
 
             <li>
