--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h2>Manutenção</h2>
                 <img src="manutencao.jpeg" alt="Logo da imagem">
                 <p class="Loja-descricao"><a href="manutencao.html">Manutenção</a></p>
-                <a href="Exemplos.html">Jogos</a>
+                <a href="https://brancazx.github.io/teste/index.html">Inicio</a>
             </li>
         </ul>
     </nav>
