--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
                 <h2>Manutenção</h2>
                 <img src="manutencao.jpeg" alt="Logo da imagem">
                 <p class="Loja-descricao"><a href="manutencao.html">Manutenção</a></p>
-
-                <li>
-                <a href="https://brancazx.github.io/teste/index.html">Inicio</a>
-                </li>
             </li>
         </ul>
     </nav>
+    </section>
+     
+    <section>
+         <li>
+                <a href="https://brancazx.github.io/teste/index.html">Inicio</a>
+            </li>
     </section>
     <footer>
         <p>Uma pagina desenvolvida pela aluna Kethallyn do Colegio Polo de Arapongas</p>
